--- a/src/StudentMarks/StudentMarks.fxml
+++ b/src/StudentMarks/StudentMarks.fxml
@@ -27,7 +27,7 @@
                     </children></Pane>
                 <JFXButton alignment="BASELINE_LEFT" buttonType="RAISED" onAction="#openClassroom" prefHeight="100.0" prefWidth="250.0" text="  Classrooms" textFill="WHITE">
                     <font>
-                        <Font size="20.0" />
+                        <Font name="Yu Gothic UI Regular" size="20.0" />
                     </font>
                     <VBox.margin>
                         <Insets />
@@ -41,7 +41,7 @@
                 </JFXButton>
                 <JFXButton alignment="BASELINE_LEFT" buttonType="RAISED" onAction="#openSetting" prefHeight="100.0" prefWidth="250.0" text="  Settings" textFill="WHITE">
                     <font>
-                        <Font size="20.0" />
+                        <Font name="Yu Gothic UI Regular" size="20.0" />
                     </font>
                     <padding>
                         <Insets left="50.0" />
@@ -66,7 +66,7 @@
                 </Text>
                 <JFXButton fx:id="backButton" layoutX="910.0" layoutY="40.0" onAction="#back" prefHeight="45.0" prefWidth="100.0" styleClass="markAssignment" stylesheets="@../art/classroom.css" text="Back" textFill="WHITE">
                     <font>
-                        <Font size="17.0" />
+                        <Font name="Yu Gothic UI Regular" size="18.0" />
                     </font>
                 </JFXButton>
             </children>
@@ -81,7 +81,7 @@
         <Text layoutX="397.0" layoutY="123.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="1.0" />
       <Text fill="#ffffff99" layoutX="260.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Double-click on selected rows to view details and edit marks manually." wrappingWidth="504.0">
          <font>
-            <Font size="15.0" />
+            <Font name="Yu Gothic UI Regular" size="15.0" />
          </font>
       </Text>
     </children>
