--- a/src/Classroom/Classroom.fxml
+++ b/src/Classroom/Classroom.fxml
@@ -35,7 +35,7 @@
                     </children></Pane>
                 <JFXButton alignment="BASELINE_LEFT" buttonType="RAISED" onAction="#openDashboard" prefHeight="100.0" prefWidth="250.0" text="  Classrooms" textFill="WHITE">
                     <font>
-                        <Font size="20.0" />
+                        <Font name="Yu Gothic UI Regular" size="20.0" />
                     </font>
                     <VBox.margin>
                         <Insets />
@@ -49,7 +49,7 @@
                 </JFXButton>
                 <JFXButton alignment="BASELINE_LEFT" buttonType="RAISED" onAction="#openSetting" prefHeight="100.0" prefWidth="250.0" text="  Settings" textFill="WHITE">
                     <font>
-                        <Font size="20.0" />
+                        <Font name="Yu Gothic UI Regular" size="20.0" />
                     </font>
                     <padding>
                         <Insets left="50.0" />
@@ -69,23 +69,18 @@
                 </Text>
                 <JFXButton fx:id="markButton" layoutX="810.0" layoutY="40.0" onAction="#markAssignment" prefHeight="45.0" prefWidth="200.0" styleClass="markAssignment" stylesheets="@../art/classroom.css" text="Mark Assignment " textFill="WHITE">
                     <font>
-                        <Font size="17.0" />
+                        <Font name="Yu Gothic UI Regular" size="18.0" />
                     </font>
                 </JFXButton>
                 <Label fx:id="errorMarkingStudentAssignment" layoutX="375.0" layoutY="40.0" prefHeight="45.0" prefWidth="328.0" textFill="#ff0000cc" />
-                <JFXButton fx:id="openHelp" buttonType="RAISED" layoutX="710.0" layoutY="40.0" onAction="#openHelp" prefHeight="45.0" prefWidth="80.0" text="Help" textFill="WHITE">
+                <JFXButton fx:id="openHelp" buttonType="RAISED" layoutX="700.0" layoutY="40.0" onAction="#openHelp" prefHeight="45.0" prefWidth="90.0" text="Help" textFill="WHITE">
                     <graphic>
                         <FontAwesomeIconView fill="WHITE" glyphName="QUESTION_CIRCLE" size="25" />
                     </graphic>
                     <font>
-                        <Font name="Yu Gothic UI Regular" size="15.0" />
+                        <Font name="Yu Gothic UI Regular" size="18.0" />
                     </font>
                 </JFXButton>
-            <Text fill="#ffffff99" layoutX="230.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Double-click on selected rows to view details." wrappingWidth="300.0">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Text>
             </children>
         </Pane>
         <TabPane fx:id="tab_pane" layoutX="250.0" layoutY="96.0" prefHeight="654.0" prefWidth="1050.0" stylesheets="@../art/classroom.css" tabClosingPolicy="UNAVAILABLE">
@@ -114,12 +109,12 @@
                                         </GridPane>
                                         <JFXButton fx:id="addAssignment" layoutX="30.0" layoutY="550.0" onAction="#createAssignment" prefHeight="45.0" prefWidth="230.0" styleClass="addButton" stylesheets="@../art/classroom.css" text="Add Assignment" textFill="WHITE">
                                             <font>
-                                                <Font size="20.0" />
+                                                <Font name="Yu Gothic UI Regular" size="18.0" />
                                             </font>
                                         </JFXButton>
                                         <JFXTextField fx:id="assignment_name" layoutX="30.0" layoutY="150.0" prefHeight="40.0" prefWidth="230.0" promptText="Enter name" style="-fx-background-color: #ffffff;">
                                             <font>
-                                                <Font size="19.0" />
+                                                <Font name="Yu Gothic UI Regular" size="20.0" />
                                             </font>
                                         </JFXTextField>
                                         <Text fill="#404040" layoutX="30.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assignment Name" wrappingWidth="230.0">
@@ -129,7 +124,7 @@
                                         </Text>
                                         <JFXTextField fx:id="assignment_id" layoutX="30.0" layoutY="65.0" prefHeight="40.0" prefWidth="230.0" promptText="Enter ID" style="-fx-background-color: #ffffff;">
                                             <font>
-                                                <Font size="19.0" />
+                                                <Font name="Yu Gothic UI Regular" size="20.0" />
                                             </font>
                                         </JFXTextField>
                                         <Text fill="#404040" layoutX="30.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assignment ID" wrappingWidth="230.0">
@@ -149,12 +144,12 @@
                                         </Text>
                                         <Text fill="#404040" layoutX="30.0" layoutY="255.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please give the questions of the assignment and their total marks." wrappingWidth="230.0">
                                             <font>
-                                                <Font size="14.0" />
+                                                <Font name="Yu Gothic UI Regular" size="14.0" />
                                             </font>
                                         </Text>
                                         <JFXButton fx:id="btnQuestion" layoutX="30.0" layoutY="285.0" onAction="#addQuestion" prefHeight="20.0" prefWidth="115.0" styleClass="addButton" stylesheets="@../art/classroom.css" text="Add Question" textFill="WHITE">
                                  <font>
-                                    <Font size="15.0" />
+                                    <Font name="Yu Gothic UI Regular" size="15.0" />
                                  </font></JFXButton>
                                         <Label fx:id="errorCreatingAssignment" layoutX="30.0" layoutY="525.0" prefHeight="20.0" prefWidth="230.0" textAlignment="CENTER" textFill="#ff0000bf">
                                  <font>
@@ -183,17 +178,17 @@
                                             <children>
                                                 <JFXButton layoutX="30.0" layoutY="140.0" onAction="#addStudentWithName" prefHeight="45.0" prefWidth="230.0" styleClass="addButton" stylesheets="@../art/classroom.css" text="Add Student" textFill="WHITE">
                                                     <font>
-                                                        <Font size="20.0" />
+                                                        <Font name="Yu Gothic UI Regular" size="18.0" />
                                                     </font>
                                                 </JFXButton>
                                                 <JFXButton layoutX="30.0" layoutY="200.0" onAction="#addStudentBack" prefHeight="45.0" prefWidth="230.0" styleClass="addButton" stylesheets="@../art/classroom.css" text="Back" textFill="WHITE">
                                                     <font>
-                                                        <Font size="20.0" />
+                                                        <Font name="Yu Gothic UI Regular" size="18.0" />
                                                     </font>
                                                 </JFXButton>
                                                 <JFXTextField fx:id="student_name" layoutX="30.0" layoutY="65.0" prefHeight="40.0" prefWidth="230.0" promptText="Enter name" style="-fx-background-color: #ffffff;">
                                                     <font>
-                                                        <Font size="19.0" />
+                                                        <Font name="Yu Gothic UI Regular" size="20.0" />
                                                     </font>
                                                 </JFXTextField>
                                                 <Text fill="#404040" layoutX="30.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Name" wrappingWidth="230.0">
@@ -212,17 +207,17 @@
                                             <children>
                                                 <JFXButton layoutX="30.0" layoutY="140.0" onAction="#addStudentWithID" prefHeight="45.0" prefWidth="230.0" styleClass="addButton" stylesheets="@../art/classroom.css" text="Add Student" textFill="WHITE">
                                                     <font>
-                                                        <Font size="20.0" />
+                                                        <Font name="Yu Gothic UI Regular" size="18.0" />
                                                     </font>
                                                 </JFXButton>
                                                 <JFXButton layoutX="30.0" layoutY="200.0" onAction="#removeStudent" prefHeight="45.0" prefWidth="230.0" styleClass="addButton" stylesheets="@../art/classroom.css" text="Remove Student" textFill="WHITE">
                                                     <font>
-                                                        <Font size="20.0" />
+                                                        <Font name="Yu Gothic UI Regular" size="18.0" />
                                                     </font>
                                                 </JFXButton>
                                                 <JFXTextField fx:id="student_id" layoutX="30.0" layoutY="65.0" prefHeight="40.0" prefWidth="230.0" promptText="Enter ID" style="-fx-background-color: #ffffff;">
                                                     <font>
-                                                        <Font size="19.0" />
+                                                        <Font name="Yu Gothic UI Regular" size="20.0" />
                                                     </font>
                                                 </JFXTextField>
                                                 <Text fill="#404040" layoutX="30.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student ID" wrappingWidth="230.0">
@@ -251,5 +246,10 @@
                 </Tab>
             </tabs>
         </TabPane>
+      <Text fill="#ffffff99" layoutX="480.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Double-click on selected rows to view details." wrappingWidth="328.0000027921051">
+         <font>
+            <Font name="Yu Gothic UI Regular" size="15.0" />
+         </font>
+      </Text>
     </children>
 </AnchorPane>
