--- a/src/Dashboard/Dashboard.fxml
+++ b/src/Dashboard/Dashboard.fxml
@@ -29,7 +29,7 @@
                </children></Pane>
                 <JFXButton alignment="BASELINE_LEFT" buttonType="RAISED" onAction="#openClassroom" prefHeight="100.0" prefWidth="250.0" text="  Classrooms" textFill="WHITE">
                     <font>
-                        <Font size="20.0" />
+                        <Font name="Yu Gothic UI Regular" size="20.0" />
                     </font>
                     <VBox.margin>
                         <Insets />
@@ -43,7 +43,7 @@
                 </JFXButton>
                <JFXButton alignment="BASELINE_LEFT" onAction="#openSetting" prefHeight="100.0" prefWidth="250.0" text="  Settings" textFill="WHITE">
                     <font>
-                        <Font size="20.0" />
+                        <Font name="Yu Gothic UI Regular" size="20.0" />
                     </font>
                     <padding>
                         <Insets left="50.0" />
@@ -61,12 +61,12 @@
                         <Font name="Yu Gothic UI Regular" size="40.0" />
                     </font>
                 </Text>
-            <JFXButton fx:id="openHelp" buttonType="RAISED" layoutX="930.0" layoutY="35.0" onAction="#openHelp" prefHeight="45.0" prefWidth="80.0" text="Help" textFill="WHITE">
+            <JFXButton fx:id="openHelp" buttonType="RAISED" layoutX="920.0" layoutY="35.0" onAction="#openHelp" prefHeight="45.0" prefWidth="90.0" text="Help" textFill="WHITE">
                <graphic>
                   <FontAwesomeIconView fill="WHITE" glyphName="QUESTION_CIRCLE" size="25" />
                </graphic>
                <font>
-                  <Font name="Yu Gothic UI Semibold" size="15.0" />
+                  <Font name="Yu Gothic UI Regular" size="18.0" />
                </font>
             </JFXButton>
             </children>
@@ -81,12 +81,12 @@
          <children>
             <JFXButton layoutX="30.0" layoutY="225.0" onAction="#addClassroom" prefHeight="45.0" prefWidth="230.0" styleClass="addButton" text="Add Classroom" textFill="WHITE">
                <font>
-                  <Font size="20.0" />
+                  <Font name="Yu Gothic UI Regular" size="20.0" />
                </font>
             </JFXButton>
             <JFXTextField fx:id="classroomname" layoutX="30.0" layoutY="150.0" prefHeight="40.0" prefWidth="230.0" promptText="Enter name" style="-fx-background-color: #ffffff;">
                <font>
-                  <Font size="19.0" />
+                  <Font name="Yu Gothic UI Regular" size="20.0" />
                </font>
             </JFXTextField>
             <Text fill="#404040" layoutX="30.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Classroom name:" wrappingWidth="230.0">
@@ -96,7 +96,7 @@
             </Text>
             <JFXTextField fx:id="classroomid" layoutX="30.0" layoutY="65.0" prefHeight="40.0" prefWidth="230.0" promptText="Enter ID" style="-fx-background-color: #ffffff;">
                <font>
-                  <Font size="19.0" />
+                  <Font name="Yu Gothic UI Regular" size="20.0" />
                </font>
             </JFXTextField>
             <Text fill="#404040" layoutX="30.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Classroom ID:" wrappingWidth="230.0">
@@ -112,9 +112,9 @@
          </children>
       </Pane>
       <Text layoutX="397.0" layoutY="123.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="1.0" />
-      <Text fill="#ffffff99" layoutX="260.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Double-click on selected rows to view details." wrappingWidth="300.0">
+      <Text fill="#ffffff99" layoutX="260.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Double-click on selected rows to view details." wrappingWidth="400.0">
          <font>
-            <Font size="15.0" />
+            <Font name="Yu Gothic UI Regular" size="15.0" />
          </font>
       </Text>
     </children>
