--- a/src/art/classroom.css
+++ b/src/art/classroom.css
@@ -92,7 +92,7 @@
 .tab .tab-label {
     -fx-alignment: CENTER;
     -fx-text-fill: #828282;
-    -fx-font-size: 18px;
+    -fx-font: 15px 'YU Gothic Semibold';
 }
 
 .tab:selected .tab-label {
